# Qt_mysql_thread_insert

./: CMakeLists.txt  README.md  cq.sql
src/app/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
src/mysql/: CMakeLists.txt  mysql.cpp  mysql.h  personmapper.cpp  personmapper.h  personservice.cpp  personservice.h
